# pathtracer

./: .gitignore  .rustfmt.toml  .travis.yml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  initial_project_description  nodenames
env/script/: test_framework
examples/: city.rs  cycles.rs  ellipse.rs  figure.rs  git_log.rs  graph.rs  hello_world.rs  hello_world_gif.rs  main.rs  mvp.rs  node_plot.rs  random.rs  types.rs
examples/conf/: pathfinder  tree
examples/helpers/: hello_world
nodes/: nodes.txt
resources/: links.txt  nodes.txt
script/: build_example_output.sh  build_examples  code_coverage  deploy.sh  strict_build.sh  test_framework
script/utils/: code_coverage  setup
src/: algo.rs  avocado.rs  coordinates.rs  lib.rs  main.rs  map.rs  pathfinder.rs
src/consts/: mod.rs
src/coordinate/: mod.rs
src/data/: mod.rs
src/group/: mod.rs
src/macros/: mod.rs
src/map/: gif.rs  mod.rs  network.rs
src/node/: coordinates.rs  figure.rs  link.rs  mod.rs  nodelink.rs
src/pathfinder/: mod.rs  network.rs  tests.rs
src/pathfinder/data/: mod.rs
src/pathfinder/group/: mod.rs
src/pathfinder/map/: mod.rs
src/pathfinder/node/: coordinates.rs  link.rs  mod.rs  nodelink.rs
src/pathfinder/tools/: constants.rs  traits.rs  util.rs
src/shape/: mod.rs
src/tests/: examples.rs  from.rs  from_list.rs  mod.rs
src/tools/: constants.rs  generic.rs  mod.rs  traits.rs  util.rs
src/traits/: mod.rs
tests/: lint  style  travis
