[package]
name = "pathfinder"
version = "0.6.2"
authors = ["PontusLaestadius <pontus.laestadius@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "Create nodes, clusters of nodes and connection in between."
repository = "https://github.com/pontuslae/pathfinder"
readme = "README.md"
keywords = ["graph", "nodes", "image", "pathing"]
categories = ["visualization", "text-processing"]
license = "MIT"

[dependencies]
rand = "0.6.1"
gif = "0.10.1"
image = "0.21.0"
pythagoras = "0.1.1"
