[package]
name = "pathtracer"
version = "0.6.5"
authors = ["PontusLaestadius <pontus.laestadius@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "Create nodes, clusters of nodes and connection in between."
repository = "https://github.com/pontuslae/pathtracer"
readme = "README.md"
keywords = ["graph", "nodes", "image", "pathing"]
categories = ["visualization", "text-processing"]
license = "MIT"

[dependencies]
rand = "0.6.5"
gif = "0.10.2"
image = "0.21.2"
pythagoras = "0.1.1"
log = "0.4.6"
