[package]
name = "pathtracer"
version = "0.7.0"
authors = ["PontusLaestadius <pontus.laestadius@gmail.com>"]
edition = "2021"
include = ["src/**/*", "Cargo.toml"]
description = "Create nodes, clusters of nodes and connection in between."
repository = "https://github.com/pontuslae/pathtracer"
readme = "README.md"
keywords = ["graph", "nodes", "image", "pathing"]
categories = ["visualization", "text-processing"]
license = "MIT"

[dependencies]
rand = "0.8.5"
gif = "0.13.1"
image = "0.25.2"
pythagoras = "0.1.1"
log = "0.4.22"
